--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "e-commerce-refresh",
+  "name": "souq-mazad-task",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
